--- a/style.css
+++ b/style.css
@@ -4,3 +4,30 @@
     box-sizing: 0;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    background-image: url(https://institutocombustivellegal.org.br/wp-content/uploads/2020/10/GASOLINA-x-ETANOL_1920.jpg) ;
+    background-position: center;
+    background-repeat: no-repeat; 
+    background-attachment: fixed;
+}
+
+#div_conteiner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    gap: 20px;
+
+    background-color: rgba(240, 248, 255, 0.700);
+    width: 700px;
+    height: 80vh;
+    border-radius: 50px;
+}
